# libieml

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile_build_all_run_test  Dockerfile_build_python  Dockerfile_build_wasm  Dockerfile_debug  Dockerfile_run_test  IEMLConfig.h.in  JSONFormat.md  README.md  build_wasm.sh  check_errors.cxx  docker-compose.yml  main.cxx  setup.py
.github/workflows/: build.yml  release.yml  validate.yml
assets/: dictionary_scripts.txt
assets/examples/: cmp_multi_alias.ieml  cmp_phrase_auxiliary_junction.ieml  cmp_phrase_junction.ieml  cmp_phrase_recursive.ieml  cmp_phrase_reference_on_root.ieml  cmp_phrase_simple.ieml  cmp_word.ieml  cmp_word_fr.ieml  dictionary.ieml  ieml-grammar.ieml  node_id_cmp.ieml  node_word.ieml  paranode.ieml
assets/exemples/: ieml-grammar.ieml
assets/grammar/: dictionary.ieml
assets/graph_exemples/: ex1.json  graph.json
assets/ieml_files/: cmp_multi_alias.ieml  cmp_phrase.ieml  cmp_phrase_auxiliary_junction.ieml  cmp_phrase_junction copy.ieml  cmp_phrase_junction.ieml  cmp_phrase_recursive.ieml  cmp_phrase_reference_on_root.ieml  cmp_phrase_simple.ieml  cmp_word.ieml  cmp_word_fr.ieml  node_id_cmp.ieml  node_word.ieml
binding/python/: CMakeLists.txt  pyieml.cpp
binding/python/tests/: test_binding.py
binding/wasm/: .npmignore  CMakeLists.txt  README.md  build.js  example.html  index.html  main.cpp  package.json  parser_wasm.loader.js  parser_wasm.worker.js  run_test.html  uuid.pc
cmake/: ExternalAntlr4Cpp.cmake  config.h.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
docs/api_reference/: api_reference.rst
docs/usage/: quickstart.rst
docs/usage/declarations/: paradigms.rst  path.rst
include/: AbstractVisitor.h  IEMLGrammarVisitor.h  IemlParser.h  ParserContext.h  ParserContextManager.h  ParserJsonSerializer.h  RecognitionError.h  ScriptGrammarVisitor.h  ScriptParser.h  SourceMapping.h  SyntaxError.h  utils.h
include/ast/: ArgumentList.h  Auxiliary.h  AuxiliaryParadigm.h  AuxiliarySubPhraseLine.h  CategoryParadigm.h  CharRange.h  Constants.h  Declaration.h  DimensionDefinition.h  Identifier.h  InflectedCategory.h  InflectionList.h  InflectionListParadigm.h  InflexedCategory.h  InvariantParanodeMapping.h  Junction.h  LanguageString.h  PartialPathTree.h  Path.h  PathNode.h  Phrase.h  PhraseLine.h  Program.h  Reference.h  ReferenceStringValue.h  RoleType.h  TemplateLanguageString.h  Variable.h  Word.h  macro_utils.h
include/ast/declaration/: AuxiliaryDeclaration.h  CategoryDeclaration.h  ComponentDeclaration.h  FunctionDeclaration.h  InflectionDeclaration.h  JunctionDeclaration.h  LanguageDeclaration.h  LinkDeclaration.h  NodeDeclaration.h  ParanodeDeclaration.h  RootParadigmDeclaration.h  SingularCategoryDeclaration.h  TableDeclaration.h  ToolWordDeclaration.h  WordDeclaration.h
include/ast/function/: WordAccessor.h  WordFunctionCondition.h  WordFunctionConditionExpr.h  WordFunctionDomainList.h
include/ast/interfaces/: AST.h  IAuxiliary.h  ICategory.h  IDeclaration.h  IFunctionCondition.h  IFunctionDomainList.h  IInflectionList.h  IJunction.h  IReferencable.h  IReferenceValue.h  ITranslatable.h
include/relation/: BinaryRelation.h  Composition.h  GraphJsonSerializer.h  Inclusion.h  RelationGraph.h
include/structure/: CategoryRegister.h  Constants.h  Element.h  HashElement.h  ICategoryRegister.h  IWordRegister.h  LanguageString.h  Namespace.h  ParadigmLayout.h  ParadigmRegister.h  Path.h  Phrase.h  ReferenceSchemaRegister.h  Table.h  TableDefinition.h  Word.h  WordRegister.h
scripts/: display_graph.py  export_ieml_dictionary.py  list_all_scripts.py  retrieve_erroneous_files.py
src/: AbstractVisitor.cpp  CMakeLists.txt  IEMLGrammarVisitor.cpp  IEMLGrammarVisitor.h  IemlParser.cpp  IemlParser.h  ParserJsonSerializer.cpp  RecognitionError.cpp  RecognitionError.h  ScriptGrammarVisitor.cpp  ScriptParser.cpp  SyntaxError.cpp
src/ast/: AST.h  AuxiliarySubPhraseLine.h  ComponentDeclaration.h  Constants.h  Declaration.h  DimensionDefinition.cpp  FlexedCategory.h  ICategory.h  IJunction.h  IReferencable.h  IRole.h  ITranslatable.h  Identifier.h  InflexedCategory.h  InvariantParanodeMapping.cpp  LanguageString.h  PartialPathTree.cpp  Phrase.h  PhraseLine.h  Program.cpp  Program.h  Reference.h  ReferenceStringValue.h  Word.h
src/ast/declaration/: AuxiliaryDeclaration.cpp  CategoryDeclaration.cpp  FunctionDeclaration.cpp  InflectionDeclaration.cpp  JunctionDeclaration.cpp  LanguageDeclaration.cpp  LinkDeclaration.cpp  ParanodeDeclaration.cpp  RootParadigmDeclaration.cpp  SingularCategoryDeclaration.cpp  TableDeclaration.cpp  WordDeclaration.cpp
src/ast/interfaces/: AST.h  ICategory.h  IDeclaration.h  IJunction.h  IReferencable.h  IReferenceValue.h  IRole.h  ITranslatable.h
src/grammar/: CMakeLists.txt  IEMLLexerGrammar.g4  IEMLParserGrammar.g4  IemlParser.h  RecognitionError.h  ScriptLexerGrammar.g4  ScriptParserGrammar.g4  ieml.g4
src/grammar/AST/: AST.h
src/relation/: Composition.cpp  Inclusion.cpp  RelationGraph.cpp
src/structure/: Constants.h  HashElement.cpp  Namespace.cpp  Namespace.h  ParadigmLayout.cpp  ParadigmRegister.cpp  Path.cpp  Path.h  Word.h
src/structure/link/: Link.cpp  LinkRegister.cpp
src/structure/link/function/: WordCondition.cpp  WordDomain.cpp  WordFunction.cpp
src/structure/path/: Path.cpp  PathNode.cpp  PathParser.cpp  PathTree.cpp
src/structure/reference/: ReferenceSchema.cpp
src/structure/script/: AdditiveScript.cpp  MultiplicativeScript.cpp  NullScript.cpp  PrimitiveScript.cpp  Script.cpp  ScriptRegister.cpp
test/: CMakeLists.txt  TestConfig.h.in  test_utils.h  utils_testing.cpp  utils_testing.h
test/erroneous_file/: test_erroneous_file.cpp
test/grammar/: test_declaration.cpp  test_json_serialization.cpp  test_paradigm.cpp  test_parser.cpp  test_phrase_word.cpp  test_syntax_error.cpp
test/relation/: test_composition.cpp  test_graph.cpp  test_inclusion.cpp
test/structure/: test_link.cpp  test_namespace.cpp  test_path.cpp  test_path_node.cpp  test_script.cpp  test_table.cpp  test_word.cpp
(+22 files in other folders)
